syntax = "proto3";

package pb;

import "entities/address.proto";
import "entities/company.proto";
import "entities/variant.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message Conversation {
  int32 id = 1;
  string zalo_name = 2;
  string zalo_img = 3;
  string user_id = 4;
  optional Message last_message = 5;
  optional string phone = 6;
}

message Message {
    int32 id = 1;
    string message_text = 2;
    bool read = 3;
    int32 send_by = 4;
    string oa_name = 5;
    string oa_image = 6;
    string zalo_name = 7;
    string zalo_img = 8;
    string message = 9;
  }