syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "google/protobuf/timestamp.proto";

import "entities/account.proto";
import "entities/service.proto";
import "entities/order.proto";
import "entities/variant.proto";
import "entities/customer.proto";
import "entities/appointment_schedule.proto";
import "entities/payment.proto";

import "rpc/customer/rpc_medical_record_create.proto";


/// ============== ENTITIES ============
message Prescription {
  int32 id = 1;
  string uuid = 2;
  string code = 3;
  int32 customer_id = 4;
  optional Account customer = 5;
  int32 company = 6;
  int32 doctor_id = 7;
  Account doctor = 8;
  optional string symptoms = 9;
  optional string diagnostic = 10;
  repeated PrescriptionItem items = 11;
  repeated Payment payment = 12;
  int32 user_created_id = 13;
  Account user_created = 14;
  optional int32 user_updated_id = 15;
  optional Account user_updated = 16;
  google.protobuf.Timestamp created_at = 18;
  optional google.protobuf.Timestamp updated_at = 19;
}

message PrescriptionItem {
  int32 id = 1;
  string as_uuid = 2;
  int32 variant_id = 3;
  Variant variant = 4;
  optional string lieu_dung = 5;
  int32 quantity = 6;
}

// ===================== REQ/RES ========================
message PrescriptionResponse {
  int32 code = 1;
  string message = 2;
  string message_trans = 3;
  string log = 4;
  Prescription details = 5;
}

// message MedicalBillUpdateRequest {
//   string uuid = 1;
//   bool is_done = 2;
//   repeated FileItem files = 3;
//   MedicalRecordType type = 4;
//   optional string diagnostic = 5;
//   optional string symptoms = 6;
// }

// message MedicalBillUpdateResponse {
//   int32 code = 1;
//   string message = 2;
//   string message_trans = 3;
//   string log = 4;
// }

